# packages/post/src/controllers/post.controller.ts
@@ -1,8 +1,6 @@
 import {
   Body,
-  Controller,
   Middlewares,
-  Patch,
   Path,
   Post,
   Request,
@@ -10,18 +8,23 @@ import {
   SuccessResponse,
 } from "tsoa";
 import validateInput from "@post/middlewares/input-validation";
-import { PostSaveSchema } from "@post/schema/post.schema";
+import { AnswerSchema, PostSaveSchema } from "@post/schema/post.schema";
 import { PostService } from "@post/services/post.service";
 import { StatusCode } from "@post/utils/const";
 import { logger } from "@post/utils/logger";
 import { verificationToken } from "@post/middlewares/tokenVerify";
-import { postDetail } from "@post/database/@types/post.interface";
+import { IAnswer, postDetail } from "@post/database/@types/post.interface";
 import CustomError from "@post/errors/customError";
-
-const postService = new PostService();
+// import Types } from "mongoose";
+// import mongoose from "mongoose";
 
 @Route("v1/post")
-export class PostController extends Controller {
+export class PostController {
+  private postService: PostService;
+  constructor() {
+    this.postService = new PostService();
+  }
+
   @SuccessResponse(StatusCode.Created, "Created successfully")
   @Post("/")
   @Middlewares(validateInput(PostSaveSchema))
@@ -39,7 +42,7 @@ export class PostController extends Controller {
 
       // console.log("req: ", request);
 
-      const post = await postService.createPost(detailPost);
+      const post = await this.postService.createPost(detailPost);
       return {
         message: "Post created successfully",
         data: post,
@@ -51,7 +54,7 @@ export class PostController extends Controller {
   }
 
   @SuccessResponse(StatusCode.Created, "Created successfully")
-  @Patch("/:id")
+  @Post("/:id")
   @Middlewares(validateInput(PostSaveSchema))
   @Middlewares(verificationToken)
   public async UpdatePost(
@@ -60,11 +63,11 @@ export class PostController extends Controller {
     @Body() requestBody: postDetail
   ): Promise<any> {
     try {
-      const existPost = await postService.findPostById(request.id);
+      const existPost = await this.postService.findPostById(request.id);
       if (!existPost) {
         throw new CustomError("Post not found", StatusCode.NotFound);
       }
-      const post = await postService.updatePost(id, requestBody);
+      const post = await this.postService.updatePost(id, requestBody);
       return {
         message: "Post updated successfully",
         data: post,
@@ -72,6 +75,44 @@ export class PostController extends Controller {
     } catch (error) {
       logger.error(`Service method error: ${error}`);
       throw error;
+    }
+  }
+  @SuccessResponse(StatusCode.Created, "Created successfully")
+  @Post("/:id/answer")
+  @Middlewares(validateInput(AnswerSchema))
+  @Middlewares(verificationToken)
+  public async createAnswer(
+    @Path() id: string,
+    @Body() answer: IAnswer,
+    @Request() request: any
+  ): Promise<any> {
+    try {
+      // Debug logging to check the input
+      logger.debug(`Received postId: ${id}`);
+      logger.debug(`Received username: ${JSON.stringify(answer.username)}`);
+      logger.debug(`Received userId: ${JSON.stringify(answer.userId)}`);
+
+      // const userId = request.userId;
+
+      const detailAnswer = {
+        ...answer,
+        userId: request?.userId,
+        username: request?.username,
+        postId: answer.postId,
+      };
+
+      const newAnswer = await this.postService.createAnswer(id, detailAnswer);
+
+      return {
+        message: "Answer created successfully",
+        data: newAnswer,
+      };
+    } catch (error: any) {
+      logger.error(`Controller Answer method error: ${error.message}`);
+      throw new CustomError(
+        `Failed to create answer: ${error.message}`,
+        StatusCode.InternalServerError
+      );
     }
   }
 }
