# packages/post/src/database/model/post.model.ts
@@ -1,13 +1,18 @@
 import mongoose from "mongoose";
 
-
+const AnswerSchema = new mongoose.Schema({
+  userId: { type: mongoose.Schema.Types.ObjectId, ref: "User" },
+  username: { type: mongoose.Schema.Types.String, ref: "User" },
+  postId: { type: mongoose.Schema.Types.ObjectId, ref: "PostModel" },
+  answer: { type: String },
+});
 const PostCard = new mongoose.Schema(
   {
     userId: { type: mongoose.Schema.Types.ObjectId, ref: "User" },
     username: { type: mongoose.Schema.Types.String, ref: "User" },
     title: { type: String, required: true },
     description: { type: String, required: true },
-    postImage: { type: String , default: "jpg", },
+    postImage: { type: String, default: "jpg" },
     category: {
       type: String,
       enum: [
@@ -25,7 +30,8 @@ const PostCard = new mongoose.Schema(
     },
     like: { type: Number, default: 0 },
     isSave: { type: Boolean, default: false },
-    createdAt: { type: Date , default: Date.now()},
+    answers: { type: [AnswerSchema], default: [] },
+    createdAt: { type: Date, default: Date.now() },
   },
   {
     toJSON: {
@@ -37,7 +43,4 @@ const PostCard = new mongoose.Schema(
   }
 );
 
-export const PostModel = mongoose.model(
-  "PostModel",
-  PostCard
-);
+export const PostModel = mongoose.model("PostModel", PostCard);
